C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_HARTREE_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_HERTZ_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_JOULE_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_KELVIN_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ELEMENTARY_CHARGE_2010;
ADD_IMPORT extern const struct codata_constant_type ELEMENTARY_CHARGE_OVER_H_2010;
ADD_IMPORT extern const struct codata_constant_type FARADAY_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type FARADAY_CONSTANT_FOR_CONVENTIONAL_ELECTRIC_CURRENT_2010;
ADD_IMPORT extern const struct codata_constant_type FERMI_COUPLING_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type FINE_STRUCTURE_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type FIRST_RADIATION_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2010;
ADD_IMPORT extern const struct codata_constant_type HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2010;